examples/tests/compute/invalid/bool/main.cue
package testing

#dagger: compute: true
